--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.10.0",
     "next": "15.3.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
     "react-hot-toast": "^2.5.2",
