--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@vercel/analytics": "^1.5.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
