--- a/.env
+++ b/.env
@@ -8,6 +8,10 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 NEXT_PUBLIC_SUPABASE_BUCKET_NAME=dmmedical
 
 # Vercel Analytics Configuration
-VERCEL_API_TOKEN=A3uTRAJCmPprWZPupb6UjYHa
-VERCEL_PROJECT_ID=dmmedical-alkes
+VERCEL_API_TOKEN=
+VERCEL_PROJECT_ID=
 NEXT_PUBLIC_VERCEL_ENV=production
+
+# Important: Replace the empty values above with your actual:
+# 1. Project ID from Vercel dashboard > Settings > General
+# 2. API token from Vercel dashboard > Settings > Tokens (create new with analytics scope)
