--- a/.env
+++ b/.env
@@ -8,10 +8,21 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 NEXT_PUBLIC_SUPABASE_BUCKET_NAME=dmmedical
 
 # Vercel Analytics Configuration
-VERCEL_API_TOKEN=
-VERCEL_PROJECT_ID=
-NEXT_PUBLIC_VERCEL_ENV=production
+# Dapatkan nilai-nilai di bawah ini dari:
 
-# Important: Replace the empty values above with your actual:
-# 1. Project ID from Vercel dashboard > Settings > General
-# 2. API token from Vercel dashboard > Settings > Tokens (create new with analytics scope)
+# VERCEL_PROJECT_ID:
+# 1. Buka https://vercel.com/dashboard
+# 2. Klik project "dmmedical-alkes"
+# 3. Klik "Settings"
+# 4. Scroll ke "Project ID" dan copy nilainya
+VERCEL_PROJECT_ID=prj_3PMFvC2Pf4uugYGvXU4S2u5sL1Sg
+
+# VERCEL_API_TOKEN:
+# 1. Buka https://vercel.com/account/tokens
+# 2. Klik "Create Token"
+# 3. Beri nama "dmmedical-analytics"
+# 4. Pilih scope "Analytics" dan "Full Account"
+# 5. Create dan copy token yang muncul
+VERCEL_API_TOKEN=yLNhVwAXSkj76EPDQwUDKQwK
+
+NEXT_PUBLIC_VERCEL_ENV=production
